--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,7 +1,8 @@
 /* Header.css */
 .first-header {
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 10px 20px;
     background-color: #f8f9fa;
@@ -9,16 +10,14 @@
   }
   
   .first-header-title {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
     color: #333;
   }
   
   .all-auth-section {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 10px;
+    position:absolute;
+    right: 20px;
   }
   
   .auth-button {
