--- a/src/adm_f/component/CardList/cardlist.css
+++ b/src/adm_f/component/CardList/cardlist.css
@@ -7,7 +7,7 @@
   text-align: center;
   font-size: 16px;
   margin: 0 auto;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   
 }
 
@@ -59,14 +59,16 @@
   right: -50px;
 }
 
-.adm_program-links {
+.adm_program-links-card {
   display: flex;
   gap: 20px;
   margin-top: 20px;
   justify-content: flex-end;
+  padding-right: 150px;
+  margin-bottom: 20px;
 }
 
-.adm_program-links a {
+.adm_program-links-card a {
   color: #4B5563;
   text-decoration: none;
   font-size: 14px;
