--- a/src/adm_f/pages/ProgramList/programlist.css
+++ b/src/adm_f/pages/ProgramList/programlist.css
@@ -1,5 +1,7 @@
 .adm_program-list-container {
   padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .adm_program-list {
@@ -36,3 +38,15 @@
     grid-template-columns: 1fr;
   }
 }
+.adm_register-button1 {
+  display: block;
+  margin: 0 0 20px auto;
+  padding: 10px 20px;
+  background-color: red;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
