--- a/src/adm_f/pages/ProgramRegistration/ProgramRegistration.css
+++ b/src/adm_f/pages/ProgramRegistration/ProgramRegistration.css
@@ -4,12 +4,13 @@
   padding: 20px;
   display: flex;
   gap: 20px;
+  margin-top: 40px;
 }
 
 .adm_program-info-section {
   flex: 0.6;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 15px;
   overflow: hidden;
 }
 
@@ -26,6 +27,7 @@
   padding: 10px 20px;
   margin: 0;
   font-size: 16px;
+  border-radius: 15px;
 }
 
 .adm_points-table {
@@ -65,13 +67,13 @@
   margin-bottom: 15px;
 }
 
-.adm_button-group {
+/* .adm_button-group {
   display: flex;
   justify-content: center;
   gap: 10px;
   padding: 15px;
   background-color: #f5f5f5;
-}
+} */
 
 .adm_cancel-btn,
 .adm_submit-btn {
@@ -138,9 +140,9 @@
   gap: 10px;
 }
 
-.adm_date-range input {
+/* .adm_input-group {
   flex: 1;
-}
+} */
 
 .adm_input-with-unit {
   display: flex;
@@ -148,9 +150,9 @@
   gap: 5px;
 }
 
-.adm_input-with-unit input {
+/* .adm_input-with-unit input {
   flex: 1;
-}
+} */
 
 .adm_input-with-unit span {
   white-space: nowrap;
@@ -161,9 +163,9 @@
   gap: 10px;
 }
 
-.adm_semester-select select {
+/* .adm_semester-select select {
   flex: 1;
-}
+} */
 
 .adm_submit-btn:hover {
   background-color: #b01829;
