--- a/src/adm_f/pages/ReliefDetailPage/repage.css
+++ b/src/adm_f/pages/ReliefDetailPage/repage.css
@@ -16,29 +16,36 @@
   border-collapse: collapse;
   border-spacing: 0;
 }
+.adm_relief-program tr:last-child td {
+  border-bottom: 1px solid #ddd;
+}
 
-.adm_relief-program th,
-.adm_relief-program td {
+.adm_program-table th,
+.adm_program-table td {
   border: 1px solid #ddd;
   padding: 12px 15px;
   text-align: left;
   vertical-align: top;
 }
 
-.adm_relief-program th {
+.adm_program-table th {
   background-color: #f8f9fa;
   font-weight: bold;
   color: #333;
 }
 
-.adm_relief-program tr:nth-child(odd) td:first-child {
+.adm_program-table tr:nth-child(odd) td:first-child {
   background-color: #f1f1f1;
 }
 
-.adm_relief-program tr:hover {
+.adm_program-table tr:hover {
   background-color: #f5f5f5;
 }
 
+.adm_application-list th {
+  font-weight: bold;
+  color: #333;
+}
 .adm_relief-program td div {
   margin-bottom: 5px;
 }
@@ -57,4 +64,16 @@
     padding: 8px;
     font-size: 14px;
   }
+}
+.adm_re-table {
+  border-collapse: collapse;
+}
+
+.adm_re-table thead {
+  border-top: 2px solid black;
+  border-bottom: 2px solid red;
+}
+
+.adm_re-table th {
+  padding: 10px;
 }
