--- a/src/stu_f/components/ApplyPopup/ApplyPopup.css
+++ b/src/stu_f/components/ApplyPopup/ApplyPopup.css
@@ -80,4 +80,12 @@
   .cancel-button:hover {
     background-color: #4d4d4d; /* 어두운 회색 */
   }
+
+  .additional-message {
+    margin-top: 10px;
+    color: #f44336; /* 경고 메시지를 강조하기 위해 빨간색 */
+    font-size: 14px;
+    line-height: 1.4;
+  }
+  
   
