--- a/src/adm_f/pages/ProgramRegistration/ProgramRegistration.css
+++ b/src/adm_f/pages/ProgramRegistration/ProgramRegistration.css
@@ -21,19 +21,42 @@
   gap: 20px;
 }
 
-.adm_section-title {
+.adm_section-title-re {
   background-color: #1e3a5f;
   color: white;
   padding: 10px 20px;
   margin: 0;
   font-size: 16px;
   border-radius: 15px;
+  text-align: center;
 }
+
+.adm_section-title-reg {
+  background-color: #1e3a5f;
+  color: white;
+  padding: 10px 20px;
+  margin: 0;
+  font-size: 16px;
+  border-radius: 15px;
+  text-align: center;
+}
+.adm_section-title-input {
+  background-color: #1e3a5f;
+  color: white;
+  padding: 10px 20px;
+  margin: 0;
+  font-size: 16px;
+  font-weight:bold;
+  border-radius: 15px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 
 .adm_points-table {
   background-color: white;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 15px;
   overflow: hidden;
 }
 
@@ -67,13 +90,13 @@
   margin-bottom: 15px;
 }
 
-/* .adm_button-group {
+.adm_button-group {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end; 
   gap: 10px;
   padding: 15px;
-  background-color: #f5f5f5;
-} */
+  margin-left: auto;
+}
 
 .adm_cancel-btn,
 .adm_submit-btn {
@@ -100,6 +123,7 @@
 
 .adm_input-group {
   margin-bottom: 12px;
+
 }
 
 .adm_input-group label {
@@ -191,4 +215,18 @@
     flex: 1;
     width: 100%;
   }
+}
+.adm_input-field-pr {
+  width: 100%;
+  padding: 8px 12px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+}
+
+.adm_form-container {
+  width: 100%;
+  max-width: 400px; /* input의 최대 너비 설정 */
 }
