--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -64,3 +64,39 @@
 .f1-admin-auth-button:hover {
   background-color: #EF5350; /* 더 진한 빨간색 */
 }
+
+.sw-user-info {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.sw-user-id {
+  font-size: 14px;
+  color: #555;
+}
+
+/* 관리자/교수 링크 스타일 */
+.sw-admin-prof-links {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 12px;
+  display: flex;
+  flex-direction: row; /* 가로 정렬 */
+  gap: 20px; /* 링크 사이 간격 */
+}
+
+.sw-admin-link,
+.sw-prof-link {
+  color: #555;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.sw-admin-link:hover,
+.sw-prof-link:hover {
+  text-decoration: underline;
+  color: #c62828;
+}
