--- a/src/stu_f/components/NoshowList/Noshowlist.css
+++ b/src/stu_f/components/NoshowList/Noshowlist.css
@@ -53,3 +53,25 @@
   font-size: 18px;
   color: black; /* 텍스트 검정색 */
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.pagination button {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+
+.pagination button.active {
+  background-color: #0056b3;
+  font-weight: bold;
+}
