--- a/src/adm_f/pages/ReliefDetailPage/repage.css
+++ b/src/adm_f/pages/ReliefDetailPage/repage.css
@@ -98,9 +98,9 @@
 }
 
 .adm_page-button.adm_active {
-  background-color: #dc3545;
+  background-color: red;
   color: white;
-  border-color: #dc3545;
+  /* border-color: #dc3545; */
 }
 
 /* .adm_page-button:hover {
