--- a/src/stu_f/components/LoanPopup/LoanPopup.css
+++ b/src/stu_f/components/LoanPopup/LoanPopup.css
@@ -64,4 +64,36 @@
     color: red;
     margin-top: 10px;
   }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px; /* 버튼 간격 */
+    margin-top: 20px;
+}
+
+.submit-btn,
+.cancel-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    flex: 1; /* 버튼 크기 동일하게 설정 */
+    text-align: center;
+}
+
+.cancel-btn {
+    background-color: #6c757d; /* 취소 버튼 색상 */
+}
+
+.submit-btn:disabled,
+.cancel-btn:disabled {
+    background-color: #c0c0c0;
+    cursor: not-allowed;
+}
+
   
