--- a/src/adm_f/component/MoneyList/moneylist.css
+++ b/src/adm_f/component/MoneyList/moneylist.css
@@ -43,6 +43,11 @@
   text-align: right;
   display: block; /* block 레벨로 변경하여 text-align이 적용되도록 함 */ 
 }
+.adm_link-text1 {
+  color: #080808;
+  text-decoration: none;
+  font-size: 14px;
+}
 
 
 /* .adm_table-title {
